<resources>
    <string name="app_name">Fort Fighter</string>
    <string name="task_title_placeholder">Merapikan tempat tidur</string>
    <string name="task_category_placeholder">Tugas Rumah</string>
    <string name="task_area_placeholder">Kamar Tidur</string>
    <string name="task_difficulty_placeholder">Mudah</string>
    <string name="task_repetition_placeholder">Senin, Selasa, Jumat</string>
    <string name="task_time_limit_placeholder">%1$s – %2$s</string>
    <string name="task_duration_placeholder">15 menit</string>
    <string name="task_status_placeholder">Selesai Dikerjakan</string>
    <string name="task_detail_placeholder">Pekerjaan dapat dimulai dari merapikan area A dilanjutkan merapikan area B dengan alat X.</string>
    <string name="task_grade_points_placeholder">9</string>
    <string name="task_notes_placeholder">Sudah cukup bagus. Bagian x perlu dirapikan lalu ditata lagi bagian y supaya terlihat lebih rapi</string>
    <string name="child_name_placeholder">Alfa</string>
    <string name="task_info_placeholder">17 April 2022 - Data</string>
    <string name="child_greetings_placeholder">Halo, %1$s !</string>
    <string name="parent_male_greetings_placeholder">Halo,\nPak %1$s !</string>
    <string name="parent_female_greetings_placeholder">Halo,\nBu %1$s !</string>
    <string name="child_level_placeholder">Level : %1$s</string>
    <string name="child_exp_placeholder">Exp : %1$d/50</string>
    <string name="house_hp_placeholder">HP : %1$d/%2$d</string>
    <string name="house_cp_placeholder">CP : %1$d/%2$d</string>
    <string name="child_cash_placeholder">Dana : Rp %1$d</string>
    <string name="child_total_points_placeholder">%1$d pt</string>
    <string name="history_congrats_placeholder">%1$s hebat!</string>
    <string name="history_description_placeholder">Berhasil menyelesaikan %1$d pekerjaan di bulan ini !</string>
    <string name="tool_price_placeholder">Rp %1$d</string>
    <string name="house_info_toolbar_title_placeholder">Tentang %1$s</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="role_pref_key">rolePref</string>
    <string name="role_pref_is_parent_key">isParent</string>
    <string name="role_pref_child_id_key">selectedChildId</string>
    <string name="role_pref_child_name_key">selectedChildName</string>
    <string name="level_1_name">Prajurit</string>
    <string name="level_2_name">Kopral</string>
    <string name="level_3_name">Sersan</string>
    <string name="level_4_name">Letnan</string>
    <string name="level_5_name">Pembantu Letnan</string>
    <string name="level_6_name">Kapten</string>
    <string name="level_7_name">Mayor</string>
    <string name="level_8_name">Letnan Kolonel</string>
    <string name="level_9_name">Kolonel</string>
    <string name="level_10_name">Jendral</string>
    <string name="task_difficulty_0">Mudah</string>
    <string name="task_difficulty_1">Sedang</string>
    <string name="task_difficulty_2">Sulit</string>
    <string name="task_status_0">Belum dikerjakan</string>
    <string name="task_status_1">Sedang dikerjakan</string>
    <string name="task_status_1_with_child_name">Sedang dikerjakan %1$s</string>
    <string name="task_status_2">Selesai dikerjakan</string>
    <string name="task_status_2_with_child_name">Selesai dikerjakan %1$s</string>
    <string name="task_status_3_for_child">Menunggu penilaian</string>
    <string name="task_status_3_for_child_with_child_name">%1$s menunggu penilaian</string>
    <string name="task_status_3_for_parent">Meminta penilaian</string>
    <string name="task_status_3_for_parent_with_child_name">%1$s meminta penilaian</string>
    <string name="task_status_4">Sudah dinilai</string>
    <string name="task_status_5">Gagal dikerjakan</string>
    <string name="task_grade_1">Kurang</string>
    <string name="task_grade_2">Baik</string>
    <string name="task_grade_3">Sangat Baik</string>
    <string-array name="difficulties">
        <item>@string/task_difficulty_0</item>
        <item>@string/task_difficulty_1</item>
        <item>@string/task_difficulty_2</item>
    </string-array>
    <string-array name="grades">
        <item>@string/task_grade_3</item>
        <item>@string/task_grade_2</item>
        <item>@string/task_grade_1</item>
    </string-array>
    <string name="task">Pekerjaan</string>
    <string name="tasks_need_grading">Pekerjaan yang belum dinilai</string>
    <string name="tasks_on_going">Pekerjaan yang belum selesai</string>
    <string name="task_list">Daftar Pekerjaan</string>
    <string name="task_title">Nama Pekerjaan</string>
    <string name="task_category">Kategori</string>
    <string name="task_area">Area Pengerjaan</string>
    <string name="task_difficulty">Kesulitan</string>
    <string name="task_repetition">Pengulangan</string>
    <string name="task_time_limit">Tenggat Waktu</string>
    <string name="task_duration">Durasi</string>
    <string name="task_status">Status</string>
    <string name="task_detail">Detail Pekerjaan</string>
    <string name="task_grade_points">Nilai</string>
    <string name="task_notes">Catatan</string>
    <string name="task_time">Waktu Pengerjaan</string>
    <string name="create_task">Buat Pekerjaan</string>
    <string name="grading_form">Form Penilaian</string>
    <string name="parent">Orang Tua</string>
    <string name="child">Anak</string>
    <string name="select_role">Pilih Role</string>
    <string name="select_child_account">Pilih Akun Anak</string>
    <string name="help">Bantuan</string>
    <string name="store">Gudang</string>
    <string name="house">Rumah Adat</string>
    <string name="child_history">Riwayat Anak</string>
    <string name="ranking">Peringkat Anak</string>
    <string name="history">Riwayat</string>
    <string name="day">Hari</string>
    <string name="start">Mulai</string>
    <string name="finish">Selesai</string>
    <string name="ask_parent_for_grading">Meminta penilaian ke orang tua</string>
    <string name="pick_tools">Pilih Alat</string>
    <string name="pick_houses">Pilih Rumah Adat</string>
    <string name="welcome_page_title">Selamat datang pahlawan</string>
    <string name="welcome_page_description">Gabung dan selamatkan rumah adat\ndari serangan penjajah!</string>
    <string name="register_page_title">Selamat datang pahlawan!</string>
    <string name="register_page_description">Daftarkan dirimu menjadi prajurit terbaik\nuntuk menyelamatkan rumah adat kita\ndari serangan penjajah!</string>
    <string name="login_page_title">Selamat datang\nkembali pahlawan!</string>
    <string name="login_page_description">Isikan identitasmu terlebih dahulu,\nsupaya tidak ada penyusup di kamp kita!</string>
    <string name="name">Nama</string>
    <string name="email">Email</string>
    <string name="password">Kata sandi</string>
    <string name="parental_role">Peran dalam keluarga</string>
    <string name="father">Ayah</string>
    <string name="mother">Ibu</string>
    <string name="register_instead">Belum pernah mendaftar? Daftar di sini</string>
    <string name="login_instead">Sudah menjadi anggota? Masuk di sini</string>
    <string name="input_child_name">Masukkan Nama Anak</string>
    <string name="input_child_gender">Jenis Kelamin Anak</string>
    <string name="male">Laki-laki</string>
    <string name="female">Perempuan</string>
    <string name="add_child">Tambah Anak</string>
    <string name="parent_account_verification">Verifikasi Akun Orang Tua</string>
    <string name="input_password">Masukkan Password Akun</string>
    <string name="input_password_description">Masukkan password akun Anda. Jangan berikan password kepada anak untuk mencegah terjadinya penilaian mandiri oleh anak.</string>
    <string name="template_task_category">Kategori Pekerjaan</string>
    <string name="template_task_repetition">Pengulangan Pekerjaan</string>
    <string name="template_task_one_time">Sekali</string>
    <string name="template_task_repeated">Berulang</string>
    <string name="template_task_category_creativity">Kreativitas</string>
    <string name="template_task_category_housework">Tugas Rumah</string>
    <string name="template_task_category_health">Kesehatan</string>
    <string name="template_task_category_self_care">Perawatan Diri</string>
    <string name="weekly_summary">Rangkuman Mingguan</string>
    <string name="week1_content">Di Minggu pertama</string>
    <string name="week2_content">Di Minggu kedua</string>
    <string name="week3_content">Di Minggu ketiga</string>
    <string name="week4_content">Di Minggu keempat</string>
    <string name="finished_tasks">Pekerjaan Selesai</string>
    <string name="upload_photo">Unggah Hasil Pekerjaan</string>
    <string name="upload_photo_description">Unggah hasil pekerjaanmu supaya \norang tuamu dapat melihat hasil kerjamu dan \nmenilai usahamu dengan baik 😉</string>
    <string name="upload_photo_complete_description">Hasil pekerjaanmu berhasil diunggah \ndan akan segera dikirimkan ke orang tuamu! \nSemangat mengerjakan pekerjaan lain dan \njangan lupa beristirahat, Prajurit! 😉</string>
    <string name="day_1">Senin</string>
    <string name="day_2">Selasa</string>
    <string name="day_3">Rabu</string>
    <string name="day_4">Kamis</string>
    <string name="day_5">Jum\'at</string>
    <string name="day_6">Sabtu</string>
    <string name="day_7">Minggu</string>
    <string name="day_short_1">Sn</string>
    <string name="day_short_2">Sl</string>
    <string name="day_short_3">Ra</string>
    <string name="day_short_4">Ka</string>
    <string name="day_short_5">Ju</string>
    <string name="day_short_6">Sb</string>
    <string name="day_short_7">Mi</string>
    <string name="select_day">Pilih hari</string>
    <string name="select_time">Pilih waktu</string>
    <string name="until">hingga</string>
    <string name="select">Pilih</string>
    <string name="select_child">Pilih Anak</string>
    <string name="task_count_on_going">Sedang\ndikerjakan</string>
    <string name="task_count_finished">Selesai\ndikerjakan</string>
    <string name="task_count_failed">Gagal\ndikerjakan</string>
    <string name="zero">0</string>
    <string name="history_congrats">Kamu hebat!</string>
    <string name="select_category">Pilih Kategori</string>
    <string name="select_task">Pilih Pekerjaan</string>
    <string name="no_time_limit">Tidak ada batas waktu</string>
    <string name="empty_child_accounts">Belum ada akun Anak.</string>
    <string name="empty_tasks">Belum ada Pekerjaan.</string>
    <string name="empty_tasks_on_going">Belum ada Pekerjaan yang perlu diselesaikan.</string>
    <string name="empty_tasks_needs_grading">Belum ada Pekerjaan yang perlu dinilai.</string>
    <string name="empty_tasks_finished">Belum ada Pekerjaan yang berhasil diselesaikan.</string>
    <string name="empty_tools">Belum ada Alat yang tersedia.</string>
    <string name="button_label_add_child">Tambah Anak</string>
    <string name="button_label_start_task">Kerjakan</string>
    <string name="button_label_finish_task">Selesai</string>
    <string name="button_label_ask_for_grading">Minta Nilai</string>
    <string name="button_label_grade_task">Beri Nilai</string>
    <string name="button_label_create_task">Buat Pekerjaan</string>
    <string name="button_label_grade_by_child">Nilai Langsung</string>
    <string name="button_label_grade_by_parent">Kirim Permintaan Penilaian</string>
    <string name="button_label_open_task_photo">Lihat Foto Pekerjaan</string>
    <string name="button_label_buy">Beli</string>
    <string name="button_label_send">Kirim</string>
    <string name="button_label_sent">Terkirim</string>
    <string name="button_label_login">Masuk ke Kamp</string>
    <string name="hint_text">Type something</string>
    <string name="hint_user_name">Isikan nama aslimu…</string>
    <string name="hint_user_email">Isikan emailmu…</string>
</resources>